
IF(WIN32)
  ADD_DEFINITIONS(-D_LIB)
ENDIF(WIN32)
INCLUDE_DIRECTORIES(..)
AUX_SOURCE_DIRECTORY(ARPACK SUB_SOURCES)
AUX_SOURCE_DIRECTORY(ARPACK_UTIL SUB_SOURCES)
AUX_SOURCE_DIRECTORY(CBLAS SUB_SOURCES)
AUX_SOURCE_DIRECTORY(CLAPACK SUB_SOURCES)
AUX_SOURCE_DIRECTORY(F2CLIBS/libF77 SUB_SOURCES)
AUX_SOURCE_DIRECTORY(F2CLIBS/libI77 SUB_SOURCES)
AUX_SOURCE_DIRECTORY(METIS SUB_SOURCES)
AUX_SOURCE_DIRECTORY(MISC SUB_SOURCES)
AUX_SOURCE_DIRECTORY(NL SUB_SOURCES)
AUX_SOURCE_DIRECTORY(SUPERLU SUB_SOURCES)
AUX_SOURCE_DIRECTORY(TAUCS SUB_SOURCES)
AUX_SOURCE_DIRECTORY(TAUCS/generic SUB_SOURCES)
AUX_SOURCE_DIRECTORY(AMD SUB_SOURCES)
AUX_SOURCE_DIRECTORY(COLAMD SUB_SOURCES)
AUX_SOURCE_DIRECTORY(CCOLAMD SUB_SOURCES)
AUX_SOURCE_DIRECTORY(CHOLMOD SUB_SOURCES)
AUX_SOURCE_DIRECTORY(ACE SUB_SOURCES)
AUX_SOURCE_DIRECTORY(ACE/RQI SUB_SOURCES)

SET(SOURCES ${SOURCES} ${SUB_SOURCES})

ADD_LIBRARY(numeric_stuff ${SOURCES})
