
IF(WIN32)
  ADD_DEFINITIONS(-DBASIC_EXPORTS)
ELSE(WIN32)
  ADD_DEFINITIONS(-DBINARY_DIR=\\"${CMAKE_BINARY_DIR}\\")
  ADD_DEFINITIONS(-DPROJECT_ROOT=\\"${CMAKE_SOURCE_DIR}\\")
ENDIF(WIN32)

AUX_SOURCE_DIRECTORY(attributes SOURCES)

AUX_SOURCE_DIRECTORY(common SOURCES)

AUX_SOURCE_DIRECTORY(containers SOURCES)

AUX_SOURCE_DIRECTORY(debug SOURCES)

AUX_SOURCE_DIRECTORY(io SOURCES)

AUX_SOURCE_DIRECTORY(modules SOURCES)

AUX_SOURCE_DIRECTORY(os SOURCES)

AUX_SOURCE_DIRECTORY(types SOURCES)

IF(WIN32)
	GatherProjectFiles(basic src/packages/OGF/basic HeaderFiles)
	ADD_LIBRARY(basic ${SOURCES} ${HeaderFiles})
ELSE(WIN32)
	ADD_LIBRARY(basic ${SOURCES})
ENDIF(WIN32)
