IF(WIN32)
  ADD_DEFINITIONS(-DCELLS_EXPORTS)
ENDIF(WIN32)

AUX_SOURCE_DIRECTORY(cgraph SOURCES)
AUX_SOURCE_DIRECTORY(ciel SOURCES)
AUX_SOURCE_DIRECTORY(common SOURCES)
AUX_SOURCE_DIRECTORY(graph SOURCES)
AUX_SOURCE_DIRECTORY(io SOURCES)
AUX_SOURCE_DIRECTORY(map SOURCES)
AUX_SOURCE_DIRECTORY(map_algos SOURCES)
#AUX_SOURCE_DIRECTORY(third_party SOURCES)
AUX_SOURCE_DIRECTORY(third_party/lib3ds SOURCES)
AUX_SOURCE_DIRECTORY(third_party/ANN SOURCES)
AUX_SOURCE_DIRECTORY(triangulation SOURCES)
AUX_SOURCE_DIRECTORY(types SOURCES)
AUX_SOURCE_DIRECTORY(vertex_set SOURCES)
AUX_SOURCE_DIRECTORY(voxel_algos SOURCES)
AUX_SOURCE_DIRECTORY(points_algos SOURCES)

IF(WIN32)
	GatherProjectFiles(cells src/packages/OGF/cells HeaderFiles)
	ADD_LIBRARY(cells ${SOURCES} ${HeaderFiles})
ELSE(WIN32)
	ADD_LIBRARY(cells ${SOURCES})
ENDIF(WIN32)


ADD_DEPENDENCIES(cells math  z)

TARGET_LINK_LIBRARIES(cells math  z)

