
IF(WIN32)
  ADD_DEFINITIONS(-DMATH_EXPORTS)
ENDIF(WIN32)

AUX_SOURCE_DIRECTORY(attributes SOURCES)
AUX_SOURCE_DIRECTORY(common SOURCES)
AUX_SOURCE_DIRECTORY(functions SOURCES)
AUX_SOURCE_DIRECTORY(geometry SOURCES)
AUX_SOURCE_DIRECTORY(linear_algebra SOURCES)
AUX_SOURCE_DIRECTORY(numeric SOURCES)
AUX_SOURCE_DIRECTORY(symbolic SOURCES)
AUX_SOURCE_DIRECTORY(types SOURCES)

AUX_SOURCE_DIRECTORY(third_party/HLBFGS SOURCES)
AUX_SOURCE_DIRECTORY(third_party/LBFGSB SOURCES)

IF(WIN32)
	GatherProjectFiles(math src/packages/OGF/math HeaderFiles)
	ADD_LIBRARY(math ${SOURCES} ${HeaderFiles})
ELSE(WIN32)
	ADD_LIBRARY(math ${SOURCES})
ENDIF(WIN32)

ADD_DEPENDENCIES(math basic numeric_stuff)
TARGET_LINK_LIBRARIES(math basic numeric_stuff)
IF (WIN32)
ELSE (WIN32)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/package/OGF/numeric_stuff ${PROJECT_SOURCE_DIR}/src/package/OGF/numeric_stuff/TAUCS)
ENDIF (WIN32)


